project/stage/parse_tests/tests/reject/bad_programs/junk_after_funcs.ul
void m() {

}

float f() {

}

junk 123
